samples/_failures_safe/1761305680_7d16f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_677736e7.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_677736e7.c:163:23: error: expected ‘;’ at end of input
  163 |         parser_advance
      |                       ^
      |                       ;
./samples/SAFE/__tmp_677736e7.c:163:9: error: expected declaration or statement at end of input
  163 |         parser_advance
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_677736e7.c:163:9: error: expected declaration or statement at end of input
